# sentry

./: AGENTS.md  README.md  code.txt  frames_2026-01-28_16.49.46.gv  frames_2026-01-31_14.33.13.gv  frames_2026-03-21_20.28.47.gv  send_packet_node.py  simulation_2d.lua  test_map.yaml  work.md
maps/: kong。yaml  map-1.pgm  map_1768468080.pgm  map_1768468080.yaml  map_20250504_130624.pgm  map_20250504_130624.yaml  map_20250519_013005.pgm  map_20250519_013005.yaml  map_20250519_013132.pgm  map_20250519_013132.yaml  map_20250519_013312.pgm  map_20250519_013312.yaml  map_20250519_013555.pgm  map_20250519_013555.yaml  map_20260115_172616.pgm  map_20260115_172616.yaml  map_20260115_172750.pgm  map_20260129_162718.pgm  map_20260131_151433.pgm
sh/: autoaim.sh  build.sh  foxglove_bridge.sh  imu.sh  kill.sh  launch.sh  nav.sh  save_map.sh  send_test_data.sh  slam.sh  startup.sh
sh/maps/: map_20260115_171448.pgm  map_20260115_171448.yaml  map_20260115_171644.pgm  map_20260115_171644.yaml  map_20260115_171812.pgm  map_20260115_171812.yaml  map_20260115_172258.pgm  map_20260115_172258.yaml
src/autoaim/rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
src/autoaim/rm_fire_control/: CMakeLists.txt  package.xml
src/autoaim/rm_fire_control/src/: rm_fire_control.cpp
src/autoaim/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
src/autoaim/rm_serial_driver/: CMakeLists.txt  README.md
src/autoaim/rm_serial_driver/config/: serial_driver.yaml
src/autoaim/rm_serial_driver/launch/: send_packet_node.launch.py  send_packet_node.py  send_test_data.py
src/autoaim/rm_serial_driver/src/: crc.cpp  rm_serial_driver.cpp
src/autoaim/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/autoaim/rm_vision_bringup/launch/: common.py  vision_bringup.launch.py
src/autoaim/ros2_hik_camera/config/: camera_info.yaml  camera_params.yaml
src/judge/behavior_tree/: navigate_to_pose_w_replanning_and_recovery.xml
src/judge/decision/: CMakeLists.txt  package.xml
src/judge/decision/behavior_tree/: attack_defense_nav.xml  judge_nav.xml  tree_nodes.xml
src/judge/decision/config/: node_params.yaml
src/judge/decision/include/rm_decision/: custume_types.hpp
src/judge/decision/include/rm_decision/behaviors/: game_time_check.hpp  hp_check.hpp  nav_to_home.hpp  patrol_nav.hpp  pose_state_publisher.hpp  serial_packet_subscriber.hpp  target_subscriber.hpp  tracking_check.hpp  wait_for_duration.hpp  waypoint_nav.hpp
src/judge/decision/launch/: run.launch.py  run_with_simulation.launch.py  simulation.launch.py
src/judge/decision/scripts/: full_simulator.py  mock_serial_publisher.py  simulate_data.sh
src/judge/decision/src/: custume_types.cpp  tree_exec_node.cpp
src/judge/decision/src/behaviors/: game_time_check.cpp  hp_check.cpp  nav_to_home.cpp  patrol_nav.cpp  pose_state_publisher.cpp  serial_packet_subscriber.cpp  target_subscriber.cpp  tracking_check.cpp  wait_for_duration.cpp  waypoint_nav.cpp
src/judge/rm_decision_cpp/: CMakeLists.txt
src/judge/rm_decision_cpp/config/: node_params.yaml
src/judge/rm_decision_cpp/src/: tree_exec_node.cpp
src/judge/sentry_api/: package.xml  setup.cfg  setup.py
src/judge/sentry_api/config/: sentry_params.yaml
src/judge/sentry_api/sentry_api/: judge.py  judge2.py  judge_tuoluo_patrol.py  judge_tuoluo_patrol_gothroughpose.py  nav_to_pose.py  pose_state_node.py  pose_state_timer.py  publish.py  through.py  todo.py  todo1.py  todo2.py
src/judge/sentry_judge/: CMakeLists.txt  package.xml
src/judge/sentry_judge/src/: nav.cpp
src/judge/sentry_startup/: CMakeLists.txt  package.xml
src/judge/sentry_startup/config/: fast_lio_mapping_param.yaml
src/judge/sentry_startup/launch/: mapping.launch.py  pointcloud_to_laserscan.launch.py  relocalization.launch.py  sentry_startup.launch.py  sentry_startup_icp.launch.py
src/navigation/FAST_LIO/PCD/: mapcpd.pgm  mapcpd.yaml
src/navigation/FAST_LIO/config/: mid360.yaml
src/navigation/FAST_LIO/launch/: mapping.launch.py  slam_main.launch.py
src/navigation/FAST_LIO/rviz/: octomap.rviz
src/navigation/FAST_LIO/rviz_cfg/: loam_livox.rviz
src/navigation/FAST_LIO/src/: laserMapping.cpp
src/navigation/cmd_chassis/: CMakeLists.txt  ReadMe.md
src/navigation/cmd_chassis/src/: fake_joint.cpp  rot_imu.cpp  twist_transformer.cpp
src/navigation/dm_imu/: CMakeLists.txt  package.xml
src/navigation/dm_imu/include/dm_imu/: imu_driver.h
src/navigation/dm_imu/launch/: dm_rviz.launch.py  run_without_rviz.launch.py
src/navigation/dm_imu/rviz/: imu_0.rviz  imu_tf.rviz
src/navigation/dm_imu/src/: imu_driver.cpp  test_imu.cpp
src/navigation/kidnapped_robot_finder-main/config/: config.yaml
src/navigation/kidnapped_robot_finder-main/global_localizer/: find_robot.py
src/navigation/livox_ros_driver2/: CMakeLists.txt  build.sh
src/navigation/livox_ros_driver2/cmake/: version.cmake
src/navigation/livox_ros_driver2/config/: MID360_config.json
src/navigation/pcd2pgm/: CMakeLists.txt  package.xml
src/navigation/pcd2pgm/config/: pcd.yaml
src/navigation/pcd2pgm/launch/: pcd2pgm.launch.py
src/navigation/pcd2pgm/src/: pcd2pgm.cpp
src/navigation/sentry_description/: CMakeLists.txt  package.xml
src/navigation/sentry_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/navigation/sentry_description/world/: map.world
src/navigation/sentry_navigation/: CMakeLists.txt  package.xml
src/navigation/sentry_navigation/config/: nav2_params.yaml
src/navigation/sentry_navigation/launch/: nav_aim.launch.py  navigation2.launch.py  slam_nav.launch.py
src/navigation/sentry_navigation/maps/: map.pgm  map.yaml
src/navigation/sentry_slam/: CMakeLists.txt  package.xml
src/navigation/sentry_slam/config/: sentry_3d.lua
src/navigation/sentry_slam/launch/: cartographer.launch.py
src/navigation/sentry_slam/maps/: 1.pgm  1.yaml  4.pgm  4.yaml  map_1773548932.pgm  map_1773548932.yaml  map_20250219.pgm  map_20250219.yaml  map_20250222.pgm  map_20250222.yaml  map_20250301.pgm  map_20250301.yaml  map_20250314.pgm  map_20250314.yaml  map_20250324.pgm  map_20250324.yaml  (+18 more)
(+30 files in other folders)
