<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_decision</name>
  <version>0.0.0</version>
  <author email="rm@sentry.com">Sentry Team</author>
  <description>RM Decision Behavior Tree - Judge based navigation</description>
  <maintainer email="rm@sentry.com">Sentry Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp_action</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
